[workspace]

members = [
    "derive-test",
    "ros_pointcloud2",
    "rpcl2-derive",
    "integration/ros_integration_tests",
    "integration/roslibrust_tests",
]

resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/stelzo/ros_pointcloud2/"
authors = ["Christopher Sieh <stelzo@steado.de>"]
homepage = "https://lib.rs/crates/ros_pointcloud2"
