[package]
name = "ros_pointcloud2"
version = "1.0.0-rc.3"
edition = "2024"
description = "Customizable conversions for working with sensor_msgs/PointCloud2."
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ros", "pointcloud2", "pointcloud", "message"]
categories = [
  "science::robotics",
  "encoding",
  "data-structures",
  "api-bindings",
]
readme = "../README.md"
documentation = "https://docs.rs/ros_pointcloud2"
exclude = [
  "**/.gitlab-ci.yml/**",
  "**/.forgejo/**",
  "**/integration/**",
  "**/docker/**",
  "**/target/**",
  "**/build/**",
  "**/dist/**",
  "**/docs/**",
  "**/doc/**",
  "**/ensure_no_std/**",
]
rust-version = "1.85"

[dependencies]
rayon = { version = "1.11", optional = true }
rpcl2-derive = { version = "1.0.0-rc.1", optional = true, path = "../rpcl2-derive" }
serde = { version = "1.0", features = ["derive"], optional = true }
rkyv = { version = "0.8", optional = true }

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.0"

[[bench]]
name = "roundtrip"
harness = false
path = "benches/roundtrip.rs"

[features]
rayon = ["dep:rayon"]
derive = ["dep:rpcl2-derive"]
rkyv = ["dep:rkyv", "std"]
serde = ["dep:serde"]
std = []
strict-type-check = []
roslibrust_ros1 = []
roslibrust_ros2 = []
rosrust = []
r2r = []
rclrs = []
ros2_interfaces_jazzy_rkyv = []
ros2_interfaces_jazzy_serde = []
nalgebra = []

default = ["std", "strict-type-check"]

[package.metadata.docs.rs]
features = ["derive", "rayon", "serde"]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
