[package]
name = "rpcl2-derive"
description = "Derive macros for the ros_pointcloud2 crate."
version = "1.0.0-rc.1"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ros", "pointcloud2", "ros_pointcloud2"]
categories = [
    "science::robotics",
    "encoding",
    "data-structures",
    "api-bindings",
]
rust-version = "1.70"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
